--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(background.png);
+    background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(user.png-removebg-preview.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
